samples/_failures_safe/1761297907_7f6cbc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_37a339f6.c: In function ‘main’:
./samples/SAFE/__tmp_37a339f6.c:150:22: error: expected ‘;’ at end of input
  150 |     for (int i = 0; i
      |                      ^
      |                      ;
./samples/SAFE/__tmp_37a339f6.c:150:5: error: expected declaration or statement at end of input
  150 |     for (int i = 0; i
      |     ^~~
